--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="{{ STATIC_URL }}/css/bootstrap.min.css">
-    <script src="{{ STATIC_URL }}/js/jquery.min.js"></script>
-    <script src="{{ STATIC_URL }}/js/popper.min.js"></script>
-    <script src="{{ STATIC_URL }}/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/bootstrap.min.css">
+    <script src="{{ STATIC_URL }}js/jquery.min.js"></script>
+    <script src="{{ STATIC_URL }}js/popper.min.js"></script>
+    <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>BASE HTML</title>
 </head>
