--- a/myblog/templates/_top.html
+++ b/myblog/templates/_top.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% load static %}
     <meta charset="UTF-8">
-    <title>top</title>
+    <link rel="stylesheet" href="{% static  'css/bootstrap.min.css' %}">
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-<P>This is top</P>
+<div class="container">
+    <div class="dropdown">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">类型</button>
+
+        <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">安全</a>
+            <a class="dropdown-item" href="#">自动化</a>
+            <a class="dropdown-item" href="#">其他</a>
+        </div>
+    </div>
+
+    <div class="dropdown">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">其他</button>
+
+        <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">安全</a>
+            <a class="dropdown-item" href="#">自动化</a>
+            <a class="dropdown-item" href="#">其他</a>
+        </div>
+    </div>
+
+       <div class="dropdown">
+        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">关于</button>
+
+        <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">安全</a>
+            <a class="dropdown-item" href="#">自动化</a>
+            <a class="dropdown-item" href="#">其他</a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
