base.html + bootstrap

--- a/myblog/templates/_top.html
+++ b/myblog/templates/_top.html
@@ -10,36 +10,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-<div class="container">
-    <div class="dropdown">
-        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">类型</button>
+<div>
+    <ul class="nav nav-pills">
+        <li><a href="#">首页</a></li>
+        <li><a href="#">分类</a></li>
+        <li><a href="#">留言板</a></li>
+        <li><a href="#">关于</a></li>
+    </ul>
 
-        <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">安全</a>
-            <a class="dropdown-item" href="#">自动化</a>
-            <a class="dropdown-item" href="#">其他</a>
-        </div>
-    </div>
-
-    <div class="dropdown">
-        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">其他</button>
-
-        <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">安全</a>
-            <a class="dropdown-item" href="#">自动化</a>
-            <a class="dropdown-item" href="#">其他</a>
-        </div>
-    </div>
-
-       <div class="dropdown">
-        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">关于</button>
-
-        <div class="dropdown-menu">
-            <a class="dropdown-item" href="#">安全</a>
-            <a class="dropdown-item" href="#">自动化</a>
-            <a class="dropdown-item" href="#">其他</a>
-        </div>
-    </div>
 </div>
 </body>
 </html>
