--- a/myblog/templates/_top.html
+++ b/myblog/templates/_top.html
@@ -10,7 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-
+    <div class="alert alert-primary" role="alert">
+  This is a primary alert—check it out!
+    </div>
     <ul class="nav nav-pills">
         <li><a href="#">首页</a></li>
         <li><a href="#">分类</a></li>
