--- a/myblog/templates/_top.html
+++ b/myblog/templates/_top.html
@@ -10,15 +10,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-    <div class="alert alert-primary" role="alert">
-  This is a primary alert—check it out!
+<nav class="navbar navbar-default" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a href="#" class="navbar-brand">Terrence's Blog</a>
+        </div>
+
+        <div>
+            <ul class="nav navbar-nav">
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">技术分享</a>
+                    <b class="caret"></b>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">前端</a></li>
+                        <li><a href="#">安全</a></li>
+                        <li><a href="#">后端</a></li>
+                        <li><a href="#">测试</a></li>
+                        <li><a href="#">其他</a></li>
+                    </ul>
+                </li>
+                <li><a href="#">自娱自乐</a></li>
+                <li><a href="#">留言板</a></li>
+                <li><a href="#">关于</a></li>
+
+            </ul>
+        </div>
+
+
+
+
+
+
+
     </div>
-    <ul class="nav nav-pills">
-        <li><a href="#">首页</a></li>
-        <li><a href="#">分类</a></li>
-        <li><a href="#">留言板</a></li>
-        <li><a href="#">关于</a></li>
-    </ul>
+
+
+
+
+</nav>
 
 
 </body>
