--- a/myblog/templates/_top.html
+++ b/myblog/templates/_top.html
@@ -10,15 +10,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-dark bg-dark" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
             <a href="#" class="navbar-brand">Terrence's Blog</a>
         </div>
 
-        <div>
-            <ul class="nav navbar-nav">
-                <li class="dropdown">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="dropdown nav-item">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">技术分享</a>
                     <b class="caret"></b>
                     <ul class="dropdown-menu">
@@ -29,9 +29,9 @@
                         <li><a href="#">其他</a></li>
                     </ul>
                 </li>
-                <li><a href="#">自娱自乐</a></li>
-                <li><a href="#">留言板</a></li>
-                <li><a href="#">关于</a></li>
+                <li class="nav-item"><a href="#">自娱自乐</a></li>
+                <li class="nav-item"><a href="#">留言板</a></li>
+                <li class="nav-item"><a href="#">关于</a></li>
 
             </ul>
         </div>
