TOP html update

--- a/myblog/templates/_top.html
+++ b/myblog/templates/_top.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-<nav class="navbar navbar-dark bg-dark" role="navigation">
+<nav class="navbar navbar-dark bg-primary" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
             <a href="#" class="navbar-brand">Terrence's Blog</a>
