--- a/myblog/templates/_top.html
+++ b/myblog/templates/_top.html
@@ -18,6 +18,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
+                <li class="nav-item"><a href="#" class="nav-link">首页</a></li>
                 <li class="dropdown nav-item">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">技术分享</a>
                     <b class="caret"></b>
