--- a/myblog/templates/_top.html
+++ b/myblog/templates/_top.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-<nav class="navbar navbar-dark bg-primary navbar-expand-lg" role="navigation">
+<nav class="navbar navbar-expand-sm bg-light" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
             <a href="#" class="navbar-brand">Terrence's Blog</a>
@@ -30,9 +30,9 @@
                         <li><a href="#">其他</a></li>
                     </ul>
                 </li>
-                <li class="nav-item"><a href="#">自娱自乐</a></li>
-                <li class="nav-item"><a href="#">留言板</a></li>
-                <li class="nav-item"><a href="#">关于</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">自娱自乐</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">留言板</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">关于</a></li>
 
             </ul>
         </div>
