TOP html update

--- a/myblog/templates/_top.html
+++ b/myblog/templates/_top.html
@@ -20,14 +20,14 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a href="#" class="nav-link">首页</a></li>
                 <li class="dropdown nav-item">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">技术分享</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">技术分享</a>
                     <b class="caret"></b>
                     <ul class="dropdown-menu">
-                        <li><a href="#">前端</a></li>
-                        <li><a href="#">安全</a></li>
-                        <li><a href="#">后端</a></li>
-                        <li><a href="#">测试</a></li>
-                        <li><a href="#">其他</a></li>
+                        <li><a class="dropdown-item" href="#">前端</a></li>
+                        <li><a class="dropdown-item" href="#">安全</a></li>
+                        <li><a class="dropdown-item" href="#">后端</a></li>
+                        <li><a class="dropdown-item" href="#">测试</a></li>
+                        <li><a class="dropdown-item" href="#">其他</a></li>
                     </ul>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="#">自娱自乐</a></li>
