--- a/myblog/templates/_top.html
+++ b/myblog/templates/_top.html
@@ -21,14 +21,13 @@
                 <li class="nav-item"><a href="#" class="nav-link">首页</a></li>
                 <li class="dropdown nav-item">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">技术分享</a>
-                    <b class="caret"></b>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">前端</a></li>
-                        <li><a class="dropdown-item" href="#">安全</a></li>
-                        <li><a class="dropdown-item" href="#">后端</a></li>
-                        <li><a class="dropdown-item" href="#">测试</a></li>
-                        <li><a class="dropdown-item" href="#">其他</a></li>
-                    </ul>
+                    <div class="dropdown-menu">
+                        <a class="dropdown-item" href="#">前端</a>
+                        <a class="dropdown-item" href="#">安全</a>
+                        <a class="dropdown-item" href="#">后端</a>
+                        <a class="dropdown-item" href="#">测试</a>
+                        <a class="dropdown-item" href="#">其他</a>
+                    </div>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="#">自娱自乐</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">留言板</a></li>
