--- a/myblog/templates/_top.html
+++ b/myblog/templates/_top.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a href="#" class="nav-link">首页</a></li>
-                <li class="dropdown nav-item">
+                <li class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">技术分享</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="#">前端</a>
