--- a/myblog/templates/_top.html
+++ b/myblog/templates/_top.html
@@ -10,17 +10,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
-<nav class="navbar navbar-expand-sm bg-light" role="navigation">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
             <a href="#" class="navbar-brand">Terrence's Blog</a>
         </div>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+        <div>
+            <ul class="navbar-nav">
                 <li class="nav-item"><a href="#" class="nav-link">首页</a></li>
                 <li class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">技术分享</a>
+                    <a href="#" class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown">
+                        技术分享
+                    </a>
+
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="#">前端</a>
                         <a class="dropdown-item" href="#">安全</a>
@@ -35,18 +38,7 @@
 
             </ul>
         </div>
-
-
-
-
-
-
-
     </div>
-
-
-
-
 </nav>
 
 
