TOP html update

--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -14,9 +14,9 @@
 </head>
 <body>
 {% include "_top.html" %}
-{% block content %}
-<p>base Content</p>
-{% endblock %}
+{#{% block content %}#}
+{#<p>base Content</p>#}
+{#{% endblock %}#}
 {% include "_bottom.html" %}
 </body>
 </html>
