--- a/myblog/templates/index.html
+++ b/myblog/templates/index.html
@@ -3,6 +3,6 @@
 <title>Terrence's Blog</title>
 {% endblock %}
 
-{% block content %}
-<h1>Blank Now</h1>
-{% endblock %}
+{#{% block content %}#}
+{#<h1>Blank Now</h1>#}
+{#{% endblock %}#}
