TOP html update

--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -17,6 +17,6 @@
 {#{% block content %}#}
 {#<p>base Content</p>#}
 {#{% endblock %}#}
-{% include "_bottom.html" %}
+{#{% include "_bottom.html" %}#}
 </body>
 </html>
