--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-{#    {% load static %}#}
-{#    <meta charset="UTF-8">#}
-{#    <link rel="stylesheet" href="{% static  'css/bootstrap.min.css' %}">#}
-{#    <script src="{% static 'js/jquery.min.js' %}"></script>#}
-{#    <script src="{% static 'js/popper.min.js' %}"></script>#}
-{#    <script src="{% static 'js/bootstrap.min.js' %}"></script>#}
-{#    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">#}
+    {% load static %}
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="{% static  'css/bootstrap.min.css' %}">
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/popper.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% block title %}
     <title>BASE HTML</title>
     {% endblock %}
