--- a/myblog/templates/_top.html
+++ b/myblog/templates/_top.html
@@ -13,12 +13,12 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a href="#" class="navbar-brand">Terrence's Blog</a>
+            <a href="http://115.159.48.13/" class="navbar-brand">Terrence's Blog</a>
         </div>
 
         <div>
             <ul class="navbar-nav">
-                <li class="nav-item"><a href="#" class="nav-link">首页</a></li>
+                <li class="nav-item"><a href="http://115.159.48.13/" class="nav-link">首页</a></li>
                 <li class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown">
                         技术分享
