TOP html update

--- a/myblog/templates/_top.html
+++ b/myblog/templates/_top.html
@@ -26,15 +26,15 @@
 
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="#">前端</a>
-                        <a class="dropdown-item" href="#">安全</a>
                         <a class="dropdown-item" href="#">后端</a>
+                        <a class="dropdown-item" href="#">安全</a>
                         <a class="dropdown-item" href="#">测试</a>
                         <a class="dropdown-item" href="#">其他</a>
                     </div>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="#">自娱自乐</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">留言板</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">关于</a></li>
+                <li class="nav-item"><a class="nav-link" href="http://115.159.48.13/about/">关于</a></li>
 
             </ul>
         </div>
