TOP html update

--- a/myblog/templates/about.html
+++ b/myblog/templates/about.html
@@ -4,12 +4,12 @@
 {% endblock %}
 
 {% block content %}
-    <div class="aboutme">
+    <div class="aboutme" style="margin: auto">
     <h1>关于我</h1>
     <p>啊啊啊啊啊啊</p>
     </div>
 
-    <div class="aboutblog">
+    <div class="aboutblog" style="margin: auto">
     <h1>关于博客</h1>
     <p>突然想自己写一个博客，又不想用一些CMS系统，于是就这样开始了。。。</p>
     <p>服务器使用django+nginx+mysql搭建。之所以选django是因为个人对python相对熟悉一些。前端使用bootstrap4 + Vue.js。</p>
