TOP html update

--- a/myblog/templates/about.html
+++ b/myblog/templates/about.html
@@ -4,17 +4,20 @@
 {% endblock %}
 
 {% block content %}
-    <div class="aboutme" style="margin: auto">
-    <h1>关于我</h1>
-    <p>啊啊啊啊啊啊</p>
-    </div>
+    <div style="margin: auto;width: 70%">
+        <div class="aboutme" >
+        <h1>关于我</h1>
+        <p>啊啊啊啊啊啊</p>
+        </div>
 
-    <div class="aboutblog" style="margin: auto">
-    <h1>关于博客</h1>
-    <p>突然想自己写一个博客，又不想用一些CMS系统，于是就这样开始了。。。</p>
-    <p>服务器使用django+nginx+mysql搭建。之所以选django是因为个人对python相对熟悉一些。前端使用bootstrap4 + Vue.js。</p>
-    <p>同时，我也想借此博客记录一些工作和生活中遇到的事情或经验</p>
-    <p>木有了。。。。。。。。。。。。。。。。。。。。。。。。。。。。</p>
+        <div class="aboutblog">
+        <h1>关于博客</h1>
+        <p>突然想自己写一个博客，又不想用一些CMS系统，于是就这样开始了。。。</p>
+        <p>服务器使用django+nginx+mysql搭建。之所以选django是因为个人对python相对熟悉一些。前端使用bootstrap4 + Vue.js。</p>
+        <p>同时，我也想借此博客记录一些工作和生活中遇到的事情或经验</p>
+        <p>木有了。。。。。。。。。。。。。。。。。。。。。。。。。。。。</p>
+
+        </div>
 
     </div>
 {% endblock %}
