--- a/myblog/templates/base.html
+++ b/myblog/templates/base.html
@@ -16,6 +16,6 @@
 {% include "_top.html" %}
 {% block content %}
 {% endblock %}
-{#{% include "_bottom.html" %}#}
+{% include "_bottom.html" %}
 </body>
 </html>
