--- a/myblog/templates/_bottom.html
+++ b/myblog/templates/_bottom.html
@@ -5,6 +5,37 @@
     <title>bottom</title>
 </head>
 <body>
-<p>This is bottom</p>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom" role="navigation">
+    <div class="container-fluid">
+{#        <div class="navbar-header">#}
+{#            <a href="http://115.159.48.13/" class="navbar-brand">Terrence's Blog</a>#}
+{#        </div>#}
+
+        <div>
+            <ul class="navbar-nav">
+
+                <li class="nav-item"><span>Design by:Terrence &nbsp;备案号：#</span></li>
+{#                <li class="nav-item"><a href="http://115.159.48.13/" class="nav-link">首页</a></li>#}
+{#                <li class="nav-item dropdown">#}
+{#                    <a href="#" class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown">#}
+{#                        技术分享#}
+{#                    </a>#}
+{##}
+{#                    <div class="dropdown-menu">#}
+{#                        <a class="dropdown-item" href="#">前端</a>#}
+{#                        <a class="dropdown-item" href="#">后端</a>#}
+{#                        <a class="dropdown-item" href="#">安全</a>#}
+{#                        <a class="dropdown-item" href="#">测试</a>#}
+{#                        <a class="dropdown-item" href="#">其他</a>#}
+{#                    </div>#}
+{#                </li>#}
+{#                <li class="nav-item"><a class="nav-link" href="#">自娱自乐</a></li>#}
+{#                <li class="nav-item"><a class="nav-link" href="#">留言板</a></li>#}
+{#                <li class="nav-item"><a class="nav-link" href="http://115.159.48.13/about/">关于</a></li>#}
+
+            </ul>
+        </div>
+    </div>
+</nav>
 </body>
 </html>
