--- a/myblog/templates/_bottom.html
+++ b/myblog/templates/_bottom.html
@@ -14,7 +14,7 @@
         <div>
             <ul class="navbar-nav">
 
-                <li class="nav-item"><span>Design by:Terrence &nbsp;备案号：#</span></li>
+                <li class="nav-item"><span style="color:whitesmoke;text-align: center">Design by:Terrence &nbsp;备案号：#</span></li>
 {#                <li class="nav-item"><a href="http://115.159.48.13/" class="nav-link">首页</a></li>#}
 {#                <li class="nav-item dropdown">#}
 {#                    <a href="#" class="nav-link dropdown-toggle" id="navbardrop" data-toggle="dropdown">#}
